Fixes from errorprone.